Updated cmake build system.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -35,10 +35,18 @@ SET(CXX_SRC
 TARGET_SOURCES(LSLib2d PRIVATE ${FORTRAN_GENERATED_SRC2D} ${CXX_SRC})
 TARGET_SOURCES(LSLib3d PRIVATE ${FORTRAN_GENERATED_SRC3D} ${CXX_SRC})
 
-TARGET_LINK_LIBRARIES(LSLib2d PUBLIC LSHeaders)
-TARGET_LINK_LIBRARIES(LSLib3d PUBLIC LSHeaders)
+TARGET_INCLUDE_DIRECTORIES(LSLib2d PUBLIC
+	$<BUILD_INTERFACE:${CMAKE_BINARY_DIR}/include/>
+	$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/>)
+TARGET_INCLUDE_DIRECTORIES(LSLib3d PUBLIC
+	$<BUILD_INTERFACE:${CMAKE_BINARYD_IR}/include/>
+	$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/>)
 
-LS_SETUP_TARGET_LIBRARY(LSLib2d)
+TARGET_LINK_LIBRARIES(LSLib2d PUBLIC LSLibHeaders)
+TARGET_LINK_LIBRARIES(LSLib3d PUBLIC LSLibHeaders)
 
-INSTALL(TARGETS LSLib2d EXPORT LSTargets COMPONENT library)
-INSTALL(TARGETS LSLib3d EXPORT LSTargets COMPONENT library)
+LSLIB_SETUP_TARGET_LIBRARY(LSLib2d)
+LSLIB_SETUP_TARGET_LIBRARY(LSLib3d)
+
+INSTALL(TARGETS LSLib2d EXPORT LSLibTargets COMPONENT library)
+INSTALL(TARGETS LSLib3d EXPORT LSLibTargets COMPONENT library)
