--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -22,6 +22,7 @@ SET(CXX_SRC
     CutCellVolumeMeshMapping.cpp
     FEMeshPartitioner.cpp
     IntegrateFunction.cpp
+    LSAdvDiffIntegrator.cpp
     LSCartGridFunction.cpp
     LSCutCellBoundaryConditions.cpp
     LSCutCellLaplaceOperator.cpp
@@ -34,10 +35,10 @@ SET(CXX_SRC
     RBFReconstructions.cpp
     ReconstructCache.cpp
     reconstructions.cpp
+    SBAdvDiffIntegrator.cpp
     SBBoundaryConditions.cpp
     SBIntegrator.cpp
     SBSurfaceFluidCouplingManager.cpp
-    SemiLagrangianAdvIntegrator.cpp
     VolumeBoundaryMeshMapping.cpp
     ZSplineReconstructions.cpp
     )
